--- a/pom.xml
+++ b/pom.xml
@@ -68,6 +68,60 @@
           </configuration>
         </plugin>
      </plugins>
+     
+     <!-- Generate the javadoc -->
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-javadoc-plugin</artifactId>
+          <version>2.8</version>
+          <configuration>
+            <aggregate>true</aggregate>
+            <attach>false</attach>
+            <level>public</level>
+            <stylesheetfile>${basedir}/src/javadoc/stylesheet.css</stylesheetfile>
+            <javadocDirectory>${basedir}/src/javadoc/</javadocDirectory>
+            <docfilessubdirs>true</docfilessubdirs>
+            <useStandardDocletOptions>true</useStandardDocletOptions>
+            <outputDirectory>${project.build.directory}/api</outputDirectory>
+            <reportOutputDirectory>${project.build.directory}/api</reportOutputDirectory>
+            <destDir>api</destDir>
+            <charset>UTF-8</charset>
+            <docencoding>UTF-8</docencoding>
+            <breakiterator>true</breakiterator>
+            <version>true</version>
+            <author>true</author>
+            <keywords>true</keywords>
+            <overview>${basedir}/src/javadoc/overview.html</overview>
+            <doctitle>${project.name} API Reference (${project.version})</doctitle>
+            <windowtitle>${project.name} API Reference (${project.version)</windowtitle>
+            <additionalparam>
+              -link http://java.sun.com/javase/6/docs/api/
+              -link http://docs.jboss.org/netty/3.2/api/
+              -group "Connection to server" ${project.groupId}.client.*
+              -group "Request/response lifecycle" ${project.groupId}.request*:${project.groupId}.response*
+
+              -sourceclasspath ${project.build.outputDirectory}
+              -nopackagediagram
+            </additionalparam>
+            <encoding>UTF-8</encoding>
+            <locale>en_US</locale>
+            <excludePackageNames>
+              org.jboss*
+            </excludePackageNames>
+          </configuration>
+        </plugin>
+
+        <!-- IDEA integration -->
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-idea-plugin</artifactId>
+          <version>2.2</version>
+          <configuration>
+            <downloadSources>true</downloadSources>
+            <jdkLevel>8.0</jdkLevel>
+          </configuration>
+        </plugin>
+      </plugins>
     </pluginManagement>
   </build>
 
