--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
   <groupId>com.biasedbit</groupId>
   <artifactId>http-client</artifactId>
-  <version>master</version>
+  <version>1.0.1</version>
   <packaging>jar</packaging>
 
   <name>HTTP client framework</name>
@@ -34,15 +34,10 @@
   <dependencies>
     <!-- Netty; the network I/O swiss army knife -->
     <dependency>
-    	<groupId>io.netty</groupId>
-    	<artifactId>netty</artifactId>
-    	<version>3.6.0.Final</version>
-    </dependency>
-    
-    <dependency>
-    	<groupId>org.projectlombok</groupId>
-    	<artifactId>lombok</artifactId>
-    	<version>1.16.4</version>
+      <groupId>io.netty</groupId>
+      <artifactId>netty</artifactId>
+      <version>3.4.1.Final</version>
+      <scope>compile</scope>
     </dependency>
 
     <!-- JUnit; for testing -->
@@ -53,7 +48,7 @@
       <scope>test</scope>
     </dependency>
   </dependencies>
-  
+
   <build>
     <pluginManagement>
       <plugins>
@@ -61,14 +56,14 @@
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-compiler-plugin</artifactId>
-          <version>3.3</version>
+          <version>2.3.2</version>
           <configuration>
-            <source>1.8</source>
-            <target>1.8</target>
+            <source>1.7</source>
+            <target>1.7</target>
           </configuration>
         </plugin>
-     
-     <!-- Generate the javadoc -->
+
+        <!-- Generate the javadoc -->
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-javadoc-plugin</artifactId>
@@ -96,6 +91,7 @@
             <additionalparam>
               -link http://java.sun.com/javase/6/docs/api/
               -link http://docs.jboss.org/netty/3.2/api/
+
               -group "Connection to server" ${project.groupId}.client.*
               -group "Request/response lifecycle" ${project.groupId}.request*:${project.groupId}.response*
 
@@ -117,7 +113,7 @@
           <version>2.2</version>
           <configuration>
             <downloadSources>true</downloadSources>
-            <jdkLevel>8.0</jdkLevel>
+            <jdkLevel>7.0</jdkLevel>
           </configuration>
         </plugin>
       </plugins>
